--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -9,3 +9,8 @@ twilio:
   accountSid: "ACb51855e2a4c9bfa4147c7aea6737e3da"
   authToken: "00da2d09051a03f9bd04cdf8cb7c54db"
   fromNumber: "+77029473415"
+gmail:
+  password: "srilmlmgniigofnu"
+  username: "marselbisengaliev1@gmail.com"
+  host: "smtp.gmail.com"
+  port: 587
